SERVER-35967 Ban explain() on $sample when storage engine supports random cursors